[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
win-inet-pton = "^1.1.0"
discord = "^1.7.3"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
selenium = "^4.1.3"
colorama = "^0.4.4"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"